# rusty-rolodex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: bench100k.rs  bench10k.rs  bench1k.rs  bench20k.rs  bench50k.rs  bench5k.rs
docs/: CHANGELOG.md  USAGE.md  WALKTHROUGH.md  perf-notes.md
examples/: add.sh  delete.sh  invalid_input.sh
src/: cli.rs  domain.rs  errors.rs  helper.rs  lib.rs  main.rs  prelude.rs  store.rs  validation.rs
src/cli/: command.rs  mod.rs  run.rs
src/domain/: contact.rs  manager.rs  mod.rs  search.rs  storage.rs
src/storage/: file.rs  memory.rs  mod.rs  remote.rs  stores.rs
src/store/: file.rs  filestore.rs  json.rs  memory.rs  mod.rs  txt.rs
src/store/storage_port/: export_csv.rs  import_csv.rs  mod.rs
src/traits/: mod.rs
tests/: add.rs  delete.rs  edit_search.rs  import_export.rs  list.rs  sync.rs
