[package]
name = "rusty-rolodex"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4", features = ["derive", "env", "default"] }
csv = "1.3"

serde = {version = "1", features = ["derive"] }

serde_json = "1"

regex = "1"

dotenv = "0.15"
rust-fuzzy-search = "0.1.1"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
predicates = "3.1"


[[bench]]
name = "bench5k"
harness = false

[[bench]]
name = "bench100k"
harness = false